<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/albumFragment">
    <fragment
        android:id="@+id/collectorFragment"
        android:name="com.example.testloginapp.ui.CollectorFragment"
        android:label="Coleccionista"
        tools:layout="@layout/collector_fragment" >
        <action
            android:id="@+id/action_collectorFragment_to_albumFragment"
            app:destination="@id/albumFragment" />
    </fragment>
    <fragment
        android:id="@+id/performerFragment"
        android:name="com.example.testloginapp.ui.PerformerFragment"
        android:label="Artistas"
        tools:layout="@layout/performer_fragment">
        <action
            android:id="@+id/action_performerFragment_to_performerDetailFragment"
            app:destination="@id/performerDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/performerDetailFragment"
        android:name="com.example.testloginapp.ui.PerformerDetailFragment"
        android:label="Artista"
        tools:layout="@layout/performer_detail_fragment" >
        <argument
            android:name="performerId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/albumFragment"
        android:name="com.example.testloginapp.ui.AlbumFragment"
        android:label="Albums"
        tools:layout="@layout/album_fragment" >
        <action
            android:id="@+id/action_albumFragment_to_addalbumFragment"
            app:destination="@id/addalbumFragment" />
        <action
            android:id="@+id/action_albumFragment_to_albumDetailFragment"
            app:destination="@id/albumDetailFragment" />

        <action
            android:id="@+id/action_albumFragment_to_collectorFragment"
            app:destination="@id/collectorFragment" />
        <action
            android:id="@+id/action_albumFragment_to_performerFragment"
            app:destination="@id/performerFragment" />

    </fragment>
    <fragment
        android:id="@+id/commentFragment"
        android:name="com.example.testloginapp.ui.CommentFragment"
        android:label="Comentarios"
        tools:layout="@layout/comment_fragment" >
        <argument
            android:name="albumId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/addalbumFragment"
        android:name="com.example.testloginapp.ui.AddAlbumFragment"
        android:label="Agregar Album"
        tools:layout="@layout/fragment_add_album" >
    </fragment>
    <fragment
        android:id="@+id/albumDetailFragment"
        android:name="com.example.testloginapp.ui.AlbumDetailFragment"
        android:label="Detalle de Album"
        tools:layout="@layout/fragment_album_detail" >
        <argument
            android:name="albumId"
            app:argType="integer" />
        <action
            android:id="@+id/action_albumDetailFragment_to_commentFragment"
            app:destination="@id/commentFragment" />
        <action
            android:id="@+id/action_albumDetailFragment_to_trackFragmet"
            app:destination="@id/trackFragment" />
    </fragment>
    <fragment
        android:id="@+id/addTrackFragment"
        android:name="com.example.testloginapp.ui.AddTrackFragment"
        android:label="AddTrackFragment" >
        <argument
            android:name="albumId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/trackFragment"
        android:name="com.example.testloginapp.ui.TrackFragment"
        android:label="Agregar Track a un Album"
        tools:layout="@layout/fragment_track">

    <argument
        android:name="albumId"
        app:argType="integer" />
    </fragment>

</navigation>